--- a/src/components/textarea-input/textarea-input.module.scss
+++ b/src/components/textarea-input/textarea-input.module.scss
@@ -9,10 +9,10 @@
 
     textarea{
         width: 100%;
-        height: 120px;
+        height: 150px;
         resize: none;
         border-radius: 10px;
-        border : 2px solid lightblue;
+        border : 1px solid lightskyblue;
         font-size: 1.3rem;
         padding: 5px;
     }
