--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -10,12 +10,24 @@
 
   display: flex;
   flex-direction: column;
+  position: relative;
 
   .title {
     text-align: center;
     font-size: 1.5rem;
     margin-bottom: 15px;
     color: orangered;
+  }
+  .data{
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+    border: 1px solid gray;
+    border-radius: 20px;
+    width: max-content;
+    padding: 5px 10px;
+    .text{
+      font-weight: bold;
+    }
   }
 }
 
