--- a/src/components/data-input/data-input.module.scss
+++ b/src/components/data-input/data-input.module.scss
@@ -3,14 +3,17 @@
     justify-content: flex-start;
     align-items: center;
     gap: 5px;
-    margin-top: 3rem;
+    position: relative;
+    
     label{
         font-size: 1.5rem;
         font-weight: bold;
+        position: absolute;
+        top: -20px;
     }
     input{
-        border: 2px solid lightblue;
-        padding: 10px 10px;
+        border: 1px solid lightskyblue;
+        padding: 5px 5px;
         border-radius: 10px;
     }
 }
