--- a/src/components/forum-select/forum-select.module.scss
+++ b/src/components/forum-select/forum-select.module.scss
@@ -1,11 +1,22 @@
 .role {
   display: flex;
 
-  .select {
-    padding-left: 10px;
-    padding: 5px 10px;
-    font-size: 1.8rem;
+  .optionBox {
+    position: absolute;
     display: flex;
+    flex-direction: column;
+    gap: 10px;
+    left: -250px;
+    border: 2px solid gray;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: white;
+    &::before {
+      content: 'Opcje';
+      top: -50px;
+      position: absolute;
+      font-size: 3rem;
+    }
   }
   .title {
     display: flex;
@@ -16,8 +27,8 @@
     flex: 1;
     font-size: 1.3rem;
     padding-left: 60px;
-    p{
-      flex:1;
+    p {
+      flex: 1;
     }
   }
 }
@@ -28,7 +39,7 @@
     justify-content: center;
     align-items: center;
 
-    .select {
+    .optionBox {
       display: none;
     }
   }
