move input value to Context now input didnt clean when you write Product name, change styled in form, move type of complaint to Context to add complaint to title, change view on calculator

--- a/src/components/input/input.module.scss
+++ b/src/components/input/input.module.scss
@@ -22,7 +22,7 @@
     z-index: 10;
     width: 30rem;
     padding: 5px;
-    border: 1px solid lightskyblue;
+    border: 1px solid grey;
     border-radius: 10px;
     background-color: transparent;
     padding-left: 15px;
