--- a/src/components/textarea-input/textarea-input.module.scss
+++ b/src/components/textarea-input/textarea-input.module.scss
@@ -15,5 +15,6 @@
         border : 1px solid lightskyblue;
         font-size: 1.3rem;
         padding: 5px;
+        font-family: 'Montserrat', sans-serif;
     }
 }
