--- a/src/components/data-input/data-input.module.scss
+++ b/src/components/data-input/data-input.module.scss
@@ -15,5 +15,6 @@
         border: 1px solid lightskyblue;
         padding: 5px 5px;
         border-radius: 10px;
+        font-family: 'Montserrat', sans-serif;
     }
 }
