--- a/src/components/data-input/data-input.module.scss
+++ b/src/components/data-input/data-input.module.scss
@@ -12,7 +12,7 @@
         top: -20px;
     }
     input{
-        border: 1px solid lightskyblue;
+        border: 1px solid gray;
         padding: 5px 5px;
         border-radius: 10px;
         font-family: 'Montserrat', sans-serif;
