--- a/src/components/textarea-input/textarea-input.module.scss
+++ b/src/components/textarea-input/textarea-input.module.scss
@@ -9,11 +9,11 @@
 
     textarea{
         width: 100%;
-        height: 150px;
+        height: 160px;
         resize: none;
         border-radius: 10px;
-        border : 1px solid lightskyblue;
-        font-size: 1.3rem;
+        border : 1px solid gray;
+        font-size: 1.2rem;
         padding: 5px;
         font-family: 'Montserrat', sans-serif;
     }
