add page a reservationList , create newCotext to that list crate new few component to separate code, add dynamic input file OnDoulbeClick now switch to input and handle that new value to context and change, add SMS checkbox to context and "done" too, next step will be conect to google sheep serwer to store that list of customers

--- a/src/page/Calculator-page/calculator-page.module.scss
+++ b/src/page/Calculator-page/calculator-page.module.scss
@@ -11,7 +11,7 @@
   justify-content: center;
   grid-template-rows: 0.2fr 0.2fr 0.5fr 0.2fr;
   gap: 20px;
-
+  position: relative;
   .mainTitle {
     display: flex;
     justify-content: center;
@@ -23,12 +23,14 @@
     }
   }
   .main {
+    
     border-radius: 20px;
     background-color: white;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.302);
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 2px solid rgba(255, 68, 0, 0.787);
   }
  
 
