--- a/src/components/calculator-info-box/calculator-info-box.module.scss
+++ b/src/components/calculator-info-box/calculator-info-box.module.scss
@@ -1,5 +1,25 @@
 .infoBox {
   font-size: 2rem;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  border: 2px solid rgba(255, 68, 0, 0.787);
+  background-color: white;
+  padding: 20px;
+  overflow: hidden;
+   span{
+    animation: enter 0.3s ease-in-out forwards;
+   }
+}
+
+@keyframes enter {
+  from {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
