--- a/src/components/calculator-input-box/calculator-input-box.module.scss
+++ b/src/components/calculator-input-box/calculator-input-box.module.scss
@@ -6,6 +6,7 @@
   margin-left: 10px;
   gap: 10px;
   font-size: 2rem;
+  
 }
 .ok {
   color: green;
@@ -25,4 +26,5 @@
   background-color: white;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.302);
   border-radius: 20px;
+  border: 2px solid rgba(255, 68, 0, 0.787);
 }
