--- a/src/page/Home-page/home.module.scss
+++ b/src/page/Home-page/home.module.scss
@@ -1,18 +1,20 @@
 .homeBox {
   display: flex;
   width: 500px;
-  height: 300px;
+  aspect-ratio: 1/0.5;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 20px;
-  border: 5px solid gray;
+  border: 5px solid rgba(214, 122, 88, 0.787);
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.459);
   border-radius: 20px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 
   .title {
-    color: orangered;
+    color: rgba(214, 122, 88, 0.787);
     font-size: 4rem;
+    text-align: center;
   }
 }
 .linkBox {
@@ -20,12 +22,16 @@
   gap: 10px;
   .link {
     text-decoration: none;
-    border: 3px solid rgb(77, 76, 76);
+    border: 3px solid rgba(214, 122, 88, 0.787);
 
     border-radius: 20px;
-    padding: 5px 10px;
+    padding: 10px 10px;
     font-size: 1.6rem;
-    color: rgb(77, 76, 76);
+    color: #333;
     font-weight: bold;
+  }
+  .link:hover {
+    background-color:rgba(214, 122, 88, 0.787);
+    color: white;
   }
 }
