--- a/src/components/calculator-input/calculator-input.module.scss
+++ b/src/components/calculator-input/calculator-input.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
 
   label {
-    font-size: 2rem;
+    font-size: 2.2rem;
     text-align: center;
     font-weight: bold;
   }
@@ -14,6 +14,6 @@
     font-size: 1.5rem;
     padding: 5px 10px;
     border-radius: 20px;
-    border: 1px solid gray;
+    border: 1px solid rgba(116, 33, 3, 0.537);
   }
 }
