--- a/src/components/forum-select/forum-select.module.scss
+++ b/src/components/forum-select/forum-select.module.scss
@@ -10,7 +10,8 @@
     border: 2px solid gray;
     padding: 20px;
     border-radius: 20px;
-    background-color: white;
+    background-color: #cfcece;
+    border: none;
     &::before {
       content: 'Opcje';
       top: -50px;
