--- a/src/components/option/option.module.scss
+++ b/src/components/option/option.module.scss
@@ -1,3 +1,35 @@
+@use '../../assets/animateGradient' as G;
+
+.optionContainer {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  left: -250px;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: #cfcece;
+  border: none;
+
+  &::before {
+    content: 'Opcje';
+    top: -50px;
+    position: absolute;
+    font-size: 3rem;
+    color: white;
+  }
+  &::after {
+    position: absolute;
+    content: '';
+    inset: 0;
+    transform: scale(1.05);
+    border-radius: 20px;
+    z-index: -1;
+    @include G.gradient;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.459);
+  }
+}
+
 .select {
   padding-left: 10px;
   padding: 5px 10px;
@@ -12,7 +44,7 @@
   gap: 10px;
   font-size: 2rem;
 }
-.buttonBox{
+.buttonBox {
   display: flex;
   justify-content: space-around;
 }
@@ -36,7 +68,7 @@
     transform: translateY(3px);
   }
 }
-.pdf{
+.pdf {
   background-color: tomato;
   border-bottom: 3px solid rgb(125, 57, 52);
 }
