--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,7 @@ body {
   justify-content: center;
   align-items: center;
   font-family: 'Montserrat', sans-serif;
-  background-color: #bbf0f379;
-  background-image: linear-gradient(315deg, #bbf0f383 0%, #f6d2857e 74%);
-
+  background-color: #333;
 }
 
 @media print {
@@ -25,3 +23,5 @@ body {
     background-color: transparent;
   }
 }
+
+
