--- a/src/page/Form-page/form-page.module.scss
+++ b/src/page/Form-page/form-page.module.scss
@@ -1,7 +1,7 @@
 .box {
     width: 18cm;
     height: 270mm;
-    border: 1px solid orangered;
+    border: 1px solid rgb(200, 58, 7);
     border-radius: 25px;
     background-color: white;
     padding: 20px;
@@ -12,7 +12,7 @@
       text-align: center;
       font-size: 1.5rem;
       margin-bottom: 15px;
-      color: orangered;
+      color: rgb(200, 58, 7);
     }
     .data{
       font-size: 1.2rem;
