change new look to Reservation list now looks mutch better, cleane some styles

--- a/src/components/reservationListInputSpan/reservationListInputSpan.module.scss
+++ b/src/components/reservationListInputSpan/reservationListInputSpan.module.scss
@@ -1,5 +1,4 @@
-.infoSpan {
-  flex: 1;
-  font-size: 1.4rem;
-  text-align: center;
+.infoSpan{
+  font-size: 1.5rem;
+  border-bottom: 1px dotted black;
 }
