--- a/src/components/reservationList/reservationList.module.scss
+++ b/src/components/reservationList/reservationList.module.scss
@@ -1,24 +1,22 @@
+@use '../../assets/animateGradient' as G ;
+
 .ListContainer {
-  display: flex;
+  position: relative;
   background-color: white;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   padding: 20px;
-  justify-content: center;
+  gap: 10px;
+  width: 700px;
   border-radius: 20px;
-  flex-direction: column;
-
-  .infoBox {
-    display: flex;
-    gap: 10px;
-    width: 100%;
-    justify-content: space-around;
-    padding: 20px;
-
-    .infoSpan {
-      flex: 1;
-      font-size: 1.4rem;
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
+  &::before {
+    position: absolute;
+    content: '';
+    inset: 0;
+    transform: scale(1.02);
+    border-radius: 20px;
+    z-index: -1;
+    @include G.gradient;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.459);
   }
 }
