--- a/src/components/reservationListInputBox/reservationListInputBox.module.scss
+++ b/src/components/reservationListInputBox/reservationListInputBox.module.scss
@@ -1,48 +1,42 @@
-.container {
-  background-color: white;
-  border-bottom: 2px solid rgba(214, 122, 88, 0.787);
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+@use '../../assets/animateGradient' as G;
+
+.box {
+
   h3 {
     text-align: center;
     padding-top: 20px;
     font-size: 2rem;
-    color: rgba(214, 122, 88, 0.787);
+    margin-left: 10px;
+    margin-bottom: 10px;
+    color: white;
   }
-  .inputBox {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    margin-top: -10px;
-
-    input {
-      border-color: rgba(214, 122, 88, 0.787);
-    }
-    .error {
-      border: 2px solid tomato;
-      animation: error 0.5s ease-in-out forwards;
-    }
-  }
-  .add {
-    align-self: flex-end;
-    position: relative;
-    width: max-content;
-    padding: 10px 20px;
-    background-color: lightskyblue;
-    border: none;
+}
+.inputBox {
+  border-radius: 20px;
+  padding: 20px;
+  position: relative;
+  width: 400px;
+  background-color: white;
+  &::before {
+    position: absolute;
+    content: '';
+    inset: 0;
+    transform: scale(1.03);
     border-radius: 20px;
-    color: black;
-    border-bottom: 3px solid rgb(70, 109, 134);
-    transition: transform 0.3s;
-    text-decoration: none;
-    font-size: 1.5rem;
+    z-index: -1;
+    @include G.gradient;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.459);
+  }
 
-    &:hover {
-      border-bottom: 3px solid transparent;
-      transform: translateY(3px);
-    }
+  input {
+    border-color: rgba(214, 122, 88, 0.787);
+  }
+  .error {
+    border: 2px solid tomato;
+    animation: error 0.5s ease-in-out forwards;
+  }
+  button {
+    margin-top: 20px;
   }
 }
 
