--- a/src/page/List-page/List.module.scss
+++ b/src/page/List-page/List.module.scss
@@ -1,10 +1,15 @@
-.ListBox{
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    h3{
-        text-align: center;
-        font-size: 2.5rem;
+.ListBox {
+  min-height: 100vh;
+  width: 1200px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  .listContainer {
+    margin-top: 20px;
+    h3 {
+      text-align: center;
+      font-size: 2.5rem;
+      color: white;
     }
+  }
 }
